[gd_scene load_steps=26 format=2]

[ext_resource path="res://textures/entities/planes/hazkani/neski/Hazkani_Neski.png" type="Texture" id=1]
[ext_resource path="res://textures/entities/planes/hazkani/neski/Hazkani_Neski_Color.png" type="Texture" id=2]
[ext_resource path="res://entities/planes/scripts/BasePlane.gd" type="Script" id=3]
[ext_resource path="res://textures/entities/smoke.png" type="Texture" id=4]
[ext_resource path="res://entities/particles/Smoke.tres" type="Material" id=5]
[ext_resource path="res://entities/particles/Fire.tres" type="Material" id=6]
[ext_resource path="res://entities/weapons/launchers/MachineGun.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/particles/engine.tres" type="Material" id=8]
[ext_resource path="res://sounds/jet_engine.ogg" type="AudioStream" id=9]
[ext_resource path="res://entities/weapons/launchers/MissileLauncher.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/weapons/launchers/FlareDispenser.tscn" type="PackedScene" id=11]
[ext_resource path="res://anims/basedie.tres" type="Animation" id=12]
[ext_resource path="res://sounds/hit.ogg" type="AudioStream" id=13]
[ext_resource path="res://textures/entities/planes/hazkani/neski/Hazkani_Neski_Insignas.png" type="Texture" id=14]
[ext_resource path="res://textures/entities/planes/hazkani/Hazkani_Pilot.png" type="Texture" id=15]

[sub_resource type="PhysicsMaterial" id=16]

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 5
emission_ring_radius = 20.0
emission_ring_inner_radius = 0.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5

[sub_resource type="CanvasItemMaterial" id=30]
light_mode = 1

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.113208, 0.660377, 0.811321, 0.95283 )
colors = PoolColorArray( 0.839844, 0.831335, 0.295258, 1, 0.943945, 0.438269, 0.10334, 1, 0.96875, 1, 0, 1, 1, 0.996094, 0.996094, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )

[sub_resource type="Curve" id=21]
max_value = 5.0
_data = [ Vector2( 0.0310078, 0.784091 ), 0.0, -1.64915, 0, 0, Vector2( 0.325581, 0.329545 ), 0.0, 0.0, 0, 0, Vector2( 0.906977, 0.329545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 1
emission_sphere_radius = 17.84
flag_disable_z = true
gravity = Vector3( -50, 0, 0 )
angular_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 100.44
radial_accel = 35.96
tangential_accel = 21.76
tangential_accel_random = 1.0
scale = 1.5
scale_curve = SubResource( 22 )
color_ramp = SubResource( 20 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.9992
height = 342.002

[sub_resource type="Animation" id=18]
resource_name = "empty"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:controls_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Neski" type="RigidBody2D" groups=["sound_emitters"]]
position = Vector2( 575, 178 )
physics_material_override = SubResource( 16 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
controls_enabled = false

[node name="Plane" type="Node2D" parent="."]

[node name="Shape" type="Sprite" parent="Plane"]
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )

[node name="Pilot" type="Sprite" parent="Plane/Shape"]
show_behind_parent = true
texture = ExtResource( 15 )
offset = Vector2( 0, -10 )

[node name="Color" type="Sprite" parent="Plane/Shape"]
modulate = Color( 0.243137, 0.254902, 0.247059, 1 )
show_behind_parent = true
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )

[node name="Insignas" type="Sprite" parent="Plane/Shape"]
texture = ExtResource( 14 )
offset = Vector2( 0, -10 )

[node name="Engine" type="Particles2D" parent="Plane"]
position = Vector2( -230, 5 )
amount = 500
speed_scale = 2.76
process_material = ExtResource( 8 )

[node name="Vapor" type="Particles2D" parent="Plane"]
position = Vector2( -326, 1 )
amount = 500
lifetime = 15.0
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="StallVapor" type="Particles2D" parent="Plane"]
position = Vector2( -64, 6 )
amount = 100
lifetime = 0.05
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 4 )

[node name="EnginePosition" type="Position2D" parent="Plane"]
position = Vector2( -165, 1 )

[node name="FireSmoke" type="Particles2D" parent="Plane"]
position = Vector2( 10, 0 )
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
visibility_rect = Rect2( -10000, -10000, 20000, 20000 )
local_coords = false
process_material = ExtResource( 6 )
texture = ExtResource( 4 )

[node name="Fire" type="Particles2D" parent="Plane"]
modulate = Color( 4, 4, 4, 0.19 )
material = SubResource( 30 )
position = Vector2( 3, 2 )
amount = 50
local_coords = false
process_material = SubResource( 23 )
texture = ExtResource( 4 )

[node name="MachineGun" parent="Plane" instance=ExtResource( 7 )]
position = Vector2( 178, -5 )

[node name="MissileLauncher" parent="Plane" instance=ExtResource( 10 )]
position = Vector2( 122, 47 )

[node name="FlareDispenser" parent="Plane" instance=ExtResource( 11 )]
position = Vector2( -50, -4 )

[node name="HitBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="JetSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -71, 0 )
stream = ExtResource( 9 )
volume_db = -25.0
pitch_scale = 1.5
autoplay = true
max_distance = 10000.0
attenuation = 1.46409
bus = "Environment"

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0
pitch_scale = 0.8
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = ExtResource( 12 )
anims/empty = SubResource( 18 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
